<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/textCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingBottom="16dp"
        card_view:cardBackgroundColor="?attr/primaryBgColor"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <TextView
                android:id="@+id/textTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/textViews"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="?attr/colorPrimary"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/textTitleDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?attr/colorPrimaryDark"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/textTitleTextView" />

            <TextView
                android:id="@+id/themeColorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?attr/colorPrimary"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/textTitleDivider"
                tools:text="Theme Color : #ffff5722 : Deep Orange" />

            <TextView
                android:id="@+id/themeDarkColorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?attr/colorPrimaryDark"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/themeColorTV"
                tools:text="Theme Dark : #ffe64a19 : Deep Orange A7" />

            <TextView
                android:id="@+id/themeAccentColorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?attr/colorAccent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/themeDarkColorTV"
                tools:text="Accent Color : #f607d8b : Blue Grey" />

            <TextView
                android:id="@+id/themePrimaryTextColorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColorPrimary"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/themeAccentColorTV"
                tools:text="Primary Text Color : #ffffffff : White" />

            <TextView
                android:id="@+id/themeSecondaryTextColorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?attr/textColorSecondary"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/themePrimaryTextColorTV"
                tools:text="Secondary Text Color : #8bffffff : Opaque White #B3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/editTextCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingBottom="16dp"
        card_view:cardBackgroundColor="?attr/primaryBgColor"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/textCardView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp" >

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/editTextViews"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="?attr/colorPrimary"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/titleDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?attr/colorPrimaryDark"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/editTextDefault"
                android:autofillHints="@string/defaultt"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/titleDivider" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/editTextDefaultText"
                android:autofillHints="@string/defaultt"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/editText1" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextThemeColor"
                android:inputType="textPersonName"
                android:textColor="?attr/colorPrimary"
                android:textColorLink="?attr/colorAccent"
                android:autofillHints="@string/defaultt"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/editText2" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextThemeDarkColor"
                android:inputType="textPersonName"
                android:textColor="?attr/colorPrimaryDark"
                android:textColorLink="?attr/colorAccent"
                android:autofillHints="@string/defaultt"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/editText3" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextAccentColor"
                android:inputType="textPersonName"
                android:textColor="?attr/colorAccent"
                android:textColorLink="?attr/colorPrimary"
                android:autofillHints="@string/defaultt"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/editText4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>