<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingBottom="16dp"
        card_view:cardBackgroundColor="?attr/primaryBgColor"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardPreventCornerOverlap="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="143dp"
                android:layout_height="88dp"
                card_view:tint="?attr/colorPrimary"
                android:tintMode="multiply"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@mipmap/nav_item_menuheader"
                android:contentDescription="@string/defaultt" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/homeTitleText"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="?attr/colorPrimary"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.471"
                card_view:layout_constraintStart_toEndOf="@+id/imageView"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homeSubTitleText"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="?attr/textColorPrimary"
                card_view:layout_constraintBottom_toBottomOf="@+id/imageView"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="1.0"
                card_view:layout_constraintStart_toEndOf="@+id/imageView"
                card_view:layout_constraintTop_toBottomOf="@+id/titleTextView"
                card_view:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="?attr/colorPrimaryDark"
                card_view:layout_constraintEnd_toEndOf="@+id/subTitleTextView"
                card_view:layout_constraintStart_toStartOf="@+id/subTitleTextView"
                card_view:layout_constraintTop_toBottomOf="@+id/subTitleTextView" />

            <TextView
                android:id="@+id/sampleInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textColorSecondary"
                android:text="@tools:sample/lorem/random"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>